@@ -1,4 +1,4 @@
-# Copyright (C) 2007-2010,	Valek Filippov (frob@df.ru)
+# Copyright (C) 2007-2011,	Valek Filippov (frob@df.ru)
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of version 3 or later of the GNU General Public
