@@ -1,4 +1,8 @@
-2011-07-06  Valek Filippov
+2011-07-08  Valek Filippov
+
+		* Move 'Add record' from mfview
+
+2011-07-07  Valek Filippov
 
 		* Change SVM command names to CamelCase
 		* Fix saving of WMF and EMFs, adding saving of SVMs
